# mg_weekly_report

./: .env.example  .gitignore  README.md  app.py  package-lock.json  데일리리포트.md  주간보고_데일리베이스.md
.kiro/hooks/: commit-readiness-check.kiro.hook  run-tests-post-task.kiro.hook  tdd-reminder-pre-task.kiro.hook  tidy-first-write-check.kiro.hook
.kiro/settings/: mcp.json
.kiro/specs/weekly-report-chat/: .config.kiro  design.md  presentation.md  requirements.md  tasks.md
.kiro/steering/: be-product.md  be-structure.md  frontend.md
backend/: .gitignore  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  api.py  config.py  error_codes.py  llm.py  llm_bedrock.py  llm_client.py  llm_factory.py  llm_parsing.py  llm_prompt.py  main.py  message_service.py  models.py  report_service.py  repository.py  room_service.py  schemas.py
backend/tests/: test_api_contract.py  test_api_endpoints.py  test_app_shell.py  test_config.py  test_error_codes.py  test_integration_report_flow.py  test_llm.py  test_llm_bedrock.py  test_llm_client.py  test_llm_factory.py  test_llm_parsing.py  test_llm_prompt.py  test_message_service.py  test_models.py  test_models_invariants.py  test_report_service.py  test_repository.py  test_room_service.py  test_smoke.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx  setupTests.ts
frontend/src/api/: apiClient.test.ts  apiClient.ts  backend.test.ts  backend.ts
frontend/src/components/: AppShell.css  AppShell.test.tsx  AppShell.tsx  (+20 more)
(+9 files in other folders)
